# app/Http/Controllers/JediController.php
@@ -2,9 +2,12 @@
 
 namespace App\Http\Controllers;
 
+use Illuminate\Http\JsonResponse;
 use App\Models\Jedi;
+use App\Http\Controllers\BaseController;
+use Illuminate\Http\Request;
 
-class JediController extends Controller
+class JediController extends BaseController
 {
     /**
      * Create a new controller instance.
@@ -22,21 +25,33 @@ class JediController extends Controller
      *     path="/api/v1/jedi",
      *     tags={"Jedi"},
      *     summary="Show all Jedi",
-     *     description="Show all Jedi",
+     *     description="Show all Jedi. 
+     *          Passing withQuotes as query string param return oll jedi with his quotes",
      *     operationId="/api/v1/jedi(GET)",
+     *     @OA\Parameter(
+     *          in="query",
+     *          name="withQuotes",
+     *          required=false,
+     *          description="Passing withQuotes as query string param return oll jedi with his quotes",
+     *          example="true",
+     *          @OA\Schema(type="boolean")
+     *     ),
      *     @OA\Response(
      *         response=200,
      *         description="successful operation",
      *     ),
      * )
      */
-    public function index(){
-        return Jedi::all();
-    }
+    public function index(Request $request): JsonResponse{
+        $withQuotes = filter_var($request->query("withQuotes"), FILTER_VALIDATE_BOOLEAN);
+        $query = Jedi::class;
+        $query = ($withQuotes) ? $query::with('quotes')->get() : $query::all();
 
-
-    public function withQuotes(){
-        return Jedi::with('quote')->get();
+        return $this->sedResponse(true, "", $query);
+        // var_dump([
+        //     $request->query("withQuotes"),
+        //     is_bool($withQuotes)
+        // ]);
     }
 
 
@@ -45,21 +60,29 @@ class JediController extends Controller
      *     path="/api/v1/jedi/{name}",
      *     tags={"Jedi"},
      *     summary="Show a specific Jedi",
-     *     description="Show a specific Jedi",
-     *     path="/api/v1/jedi/{name}(GET)",
+     *     description="Show a specific Jedi. 
+     *          Passing withQuotes as query string param return oll jedi with his quotes",
+     *     operationId="/api/v1/jedi/{name}(GET)",
+     *     @OA\Parameter(
+     *          in="query",
+     *          name="withQuotes",
+     *          required=false,
+     *          description="Passing withQuotes as query string param return oll jedi with his quotes",
+     *          example="true",
+     *          @OA\Schema(type="boolean")
+     *     ),
      *     @OA\Response(
      *         response=200,
      *         description="successful operation",
      *     ),
      * )
      */
-    public function show( string $jediName ){
-        return Jedi::where("nome", "=", $jediName)->get();
-    }
+    public function show(Request $request, string $jediName): JsonResponse{
+        $withQuotes = filter_var($request->query("withQuotes"), FILTER_VALIDATE_BOOLEAN); // true
+        $query = Jedi::where("nome", "=", $jediName); 
+        $query = ($withQuotes) ? $query->with('quotes')->get() : $query->get();
 
-
-    public function showWithQuotes( string $jediName ){
-        return Jedi::with('quote')->where("nome", $jediName)->get();
+        return $this->sedResponse(true, "", $query);
     }
 
     
