# app/Http/Controllers/QuoteController.php
@@ -5,8 +5,11 @@ namespace App\Http\Controllers;
 
 use Illuminate\Http\JsonResponse;
 use App\Models\Quote;
+use App\Http\Controllers\BaseController;
+use Illuminate\Http\Request;
 
-class QuoteController extends Controller
+
+class QuoteController extends BaseController
 {
     /**
      * Create a new controller instance.
@@ -18,65 +21,90 @@ class QuoteController extends Controller
         
     }
 
+    /**
+     * @OA\Get(
+     *     path="/api/v1/quotes",
+     *     tags={"Quotes"},
+     *     summary="Show all quotes",
+     *     description="Show all quotes. 
+     *          Passing withRelations as query string param return oll quotes with jedi and films",
+     *     operationId="/api/v1/quotes(GET)",
+     *     @OA\Parameter(
+     *          in="query",
+     *          name="withRelations",
+     *          required=false,
+     *          description="Passing withRelations as query string param return oll quotes with jedi and films",
+     *          example="true",
+     *          @OA\Schema(type="boolean")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *     ),
+     * )
+     */
+    public function index(Request $request): JsonResponse{
+        $withRelations = filter_var($request->query("withRelations"), FILTER_VALIDATE_BOOLEAN); // true
+        $quotes = ($withRelations) ? Quote::with('jedi')->with('film')->get() : Quote::all();
 
-    public function index(): JsonResponse{
-        $resultFromQuery = Quote::with('jedi')->with('film')->get();
-        $quotes = [];
-
-        foreach( $resultFromQuery as $key => $value ){
-            $quote = [
-                "nome"  => $value->jedi->nome,
-                "film"  => $value->film->titolo,
-                "anno"  => $value->film->anno,
-                "quote" => $value->quote,
-            ];
-            $quotes[] = $quote;
-        }
-
-        return response()->json([
-            "success" => true,
-            "message" => "",
-            "data" => $quotes
-        ], 200);
+        return $this->sedResponse(true, "", $quotes);
     }
 
+    /**
+     * @OA\Get(
+     *     path="/api/v1/quotes/{id}",
+     *     tags={"Quotes"},
+     *     summary="Show all quotes",
+     *     description="Show a specific quotes. 
+     *          Passing withRelations as query string param return oll quotes with jedi and films",
+     *     operationId="/api/v1/quotes/{id}(GET)",
+     *     @OA\Parameter(
+     *          in="query",
+     *          name="withRelations",
+     *          required=false,
+     *          description="Passing withRelations as query string param return oll quotes with jedi and films",
+     *          example="true",
+     *          @OA\Schema(type="boolean")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *     ),
+     * )
+     */
+    public function show(Request $request, int $id): JsonResponse{
+        $withRelations = filter_var($request->query("withRelations"), FILTER_VALIDATE_BOOLEAN); // true
+        $quote = ($withRelations) ? Quote::with('jedi')->with('film')->find($id) : Quote::find($id);
 
-
-    public function show( $id ): JsonResponse{
-        $resultFromQuery = Quote::find($id);
-        $result = [
-            "nome"  => $resultFromQuery->jedi->nome,
-            "film"  => $resultFromQuery->film->titolo,
-            "anno"  => $resultFromQuery->film->anno,
-            "quote" => $resultFromQuery->quote,
-        ];
-
-        return response()->json([
-            "success" => true,
-            "message" => "",
-            "data" => $result
-        ], 200);
+        return $this->sedResponse(true, "", $quote);
     }
 
+    /**
+     * @OA\Get(
+     *     path="/api/v1/quotes/random",
+     *     tags={"Quotes"},
+     *     summary="Show all quotes",
+     *     description="Show a random quotes. 
+     *          Passing withRelations as query string param return oll quotes with jedi and films",
+     *     operationId="/api/v1/quotes/random(GET)",
+     *     @OA\Parameter(
+     *          in="query",
+     *          name="withRelations",
+     *          required=false,
+     *          description="Passing withRelations as query string param return oll quotes with jedi and films",
+     *          example="true",
+     *          @OA\Schema(type="boolean")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="successful operation",
+     *     ),
+     * )
+     */
+    public function random(Request $request): JsonResponse{
+        $randomNumber = rand(1, Quote::count());
 
-    public function random(): JsonResponse{
-        $numberOfQuotes = Quote::count();
-        $randomNumber = rand(1, $numberOfQuotes);
-        
-        $resultFromQuery = Quote::find($randomNumber);
-
-        $result = [
-            "nome"  => $resultFromQuery->jedi->nome,
-            "film"  => $resultFromQuery->film->titolo,
-            "anno"  => $resultFromQuery->film->anno,
-            "quote" => $resultFromQuery->quote,
-        ];
-
-        return response()->json([
-            "success" => true,
-            "message" => "",
-            "data" => $result
-        ], 200);
+        return $this->show($request, $randomNumber);
     }
     
 }
