# app/Models/Jedi.php
@@ -5,7 +5,20 @@ namespace App\Models;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
 
-
+/**
+ * @OA\Schema(
+ *   schema="Jedi",
+ *   @OA\Property(
+ *      format="int64",
+ *      type="string",
+ *      property="nome",
+ *      title="nome",
+ *      default="",
+ *      description="nome",
+ *      example="1"
+ *   ),
+ * )
+ */
 class Jedi extends Model 
 {
     use HasFactory;
@@ -21,8 +34,7 @@ class Jedi extends Model
 
 
 
-    
-    public function quote(){
+    public function quotes(){
         return $this->hasMany(Quote::class);
     }
 
